--- a/themes/detox/static/css/main.css
+++ b/themes/detox/static/css/main.css
@@ -41,7 +41,7 @@ body {
 }
 
 a {
-    background: transparent
+    background: transparent;
 }
 
 a:focus {
@@ -381,7 +381,7 @@ p {
 
 a {
     color: #333;
-    text-decoration: none;
+    text-decoration: underline;
     line-height: inherit;
     outline: 0;
     -webkit-transition: color .1s ease-out;
@@ -400,7 +400,7 @@ a {
 }
 
 a:hover {
-    color: #b3b3b3
+    color: #666
 }
 
 p a,
@@ -676,7 +676,7 @@ input[type="button"]:active {
 }
 
 .btn-secondary {
-    border: solid 1px #b3b3b3;
+    border: solid 1px #666;
     color: #333
 }
 
@@ -684,7 +684,7 @@ input[type="button"]:active {
 .btn-secondary:focus {
     background-color: #e6e6e6;
     color: #333;
-    border: solid 1px #b3b3b3
+    border: solid 1px #666
 }
 
 select,
@@ -775,7 +775,7 @@ textarea {
     display: block;
     width: 100%;
     max-width: 100%;
-    border: 1px solid #b3b3b3;
+    border: 1px solid #666;
     border-radius: 5px;
     padding: 10px 0px;
     font-size: inherit;
@@ -837,7 +837,7 @@ pre {
     word-wrap: break-word;
     color: #333;
     background-color: #e6e6e6;
-    border: 1px solid #b3b3b3;
+    border: 1px solid #666;
     border-radius: 5px
 }
 
@@ -862,7 +862,7 @@ hr {
     height: 1px;
     border: 0;
     border-top: 1px solid #ccc;
-    margin: 50px 0;
+    margin: 3em 0;
     padding: 0
 }
 
@@ -889,7 +889,7 @@ hr {
     text-align: center;
     min-height: 15em;
     padding-top: 7em;
-    margin-bottom: 9em
+    margin-bottom: 4em;
 }
 
 @media (max-width: 800px) {
@@ -908,7 +908,7 @@ hr {
 .blog-description {
     text-transform: uppercase;
     letter-spacing: 4px;
-    color: #b3b3b3;
+    color: #666;
     font-size: 80%
 }
 
@@ -921,7 +921,7 @@ article {
 }
 
 article.li {
-    margin-bottom: 2em;
+    margin-bottom: 7em;
 }
 
 @media (max-width: 800px) {
@@ -935,32 +935,34 @@ article.li {
 }
 
 .post-header {
-    text-align: center
+    text-align: center;
+    /*margin-bottom: 2em;*/
 }
 
-.post-title {
-    margin-bottom: 30px
+.post-title {}
+
+.post-title-link {
+    text-decoration: none;
 }
 
 .post-time {
     text-transform: uppercase;
     letter-spacing: 4px;
-    margin-bottom: 30px;
     font-size: 80%
 }
 
 .post-footer {
     text-align: center;
     text-transform: uppercase;
-    letter-spacing: 4px;
+    letter-spacing: 0.05em;
     font-size: 80%;
-    margin-top: 30px
+    /*margin-top: 1em;*/
 }
 
 .pagination {
     text-align: center;
     margin: 4em 0 9em 0;
-    color: #b3b3b3
+    color: #666
 }
 
 @media (max-width: 800px) {
@@ -988,7 +990,7 @@ article.li {
 }
 
 .p-post-title {
-    margin-bottom: 50px
+    margin-bottom: 0.25em;
 }
 
 .f-1 {
@@ -1006,7 +1008,7 @@ article.li {
 }
 
 .author {
-    float: left
+    float: right;
 }
 
 @media (max-width: 550px) {
@@ -1023,10 +1025,6 @@ article.li {
     .f-post-time {
         float: inherit !important
     }
-}
-
-.f-post-time {
-    float: right
 }
 
 @media (max-width: 550px) {
@@ -1050,7 +1048,7 @@ article.li {
 }
 
 .f-post-tags {
-    float: right
+    text-align: left;
 }
 
 @media (max-width: 550px) {
@@ -1086,5 +1084,5 @@ article.li {
 
 #site-footer {
     text-align: center;
-    height: 10em
+    margin-bottom: 2em;
 }
