--- a/themes/detox/layouts/_default/li.html
+++ b/themes/detox/layouts/_default/li.html
@@ -1,11 +1,11 @@
 <article class="li {{ .Type }}">
     <header class="post-header">
-        <h3 class="post-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h3>
-        <p class="post-time"><time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}">{{ .Date.Format "January 2, 2006" }}</time></p>
+        <h3 class="post-title"><a class="post-title-link" href="{{ .Permalink }}">{{ .Title }}</a></h3>
+        <span class="post-time"><time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}">{{ .Date.Format "January 2, 2006" }}</time></span>
     </header>
     
     <section class="post-excerpt">
-        <p>{{ .Params.description }}</p>
+        {{ .Params.description }}
     </section>
 
     <footer class="post-footer">
@@ -13,9 +13,10 @@
             {{ if .Site.Params.disqusShortname }}
             <a href="{{ .Permalink }}#comments"><i class="fa fa-comment"></i> Comments</a>
             {{ end }}
-            {{ with.Params.tags }}
-            	&nbsp;&nbsp;<i class="fa fa-tag"></i>
-            	{{ delimit  . ", " }}
+            {{ if .Params.tags }}
+                {{ range .Params.tags }}
+                    <span class="f-post-tags"><a href="/tags/{{ . | urlize }}">{{ . }}</a></span> &nbsp;
+                {{ end }}
             {{ end }}
         </span>
     </footer>
