--- a/themes/detox/static/css/main.css
+++ b/themes/detox/static/css/main.css
@@ -902,7 +902,11 @@ hr {
 .blog-title {
     /*text-transform: uppercase;*/
     letter-spacing: 6px;
-    font-size: 75px
+    font-size: 75px;
+}
+
+.blog-title-link {
+    text-decoration: none;
 }
 
 .blog-description {
@@ -974,8 +978,8 @@ article.li {
 .post-content a,
 #site-footer a {
     color: #333;
-    text-decoration: none;
-    font-weight: bold
+    text-decoration: underline;
+    /*font-weight: bold*/
 }
 
 .post-content a:hover,
